Fix silent persistence failures and screen leaks; share form logic
Persistence
- AnimalDAO no longer swallows SQLExceptions. A failed insert used to log
  and return false, which AnimalService ignored, so a duplicate chip told
  the user the animal was saved. Chip collisions now raise
  DuplicateChipException and are marked on the chip field.
- findByRecordNumber propagates database errors instead of returning null,
  which the sync pull read as "not present locally".
- last_modified uses COALESCE, so a Firebase document without a timestamp
  is stamped instead of violating NOT NULL, and the two insert/update SQL
  variants per DAO collapse into one.
- The service-level timestamp parameter both services ignored is gone.
- PlacesDAO propagates failures instead of returning an empty list.

Sync
- One sync at a time: the scheduler and the startup sync could overlap on
  the shared connection.
- Pending deletions are read once per pull instead of once per animal.
- Failures are logged at WARN with their stack trace; logs are in English.

Screens
- PortalController.openScreen replaces setContent and six copies of the
  FXMLLoader boilerplate. setContent skipped the outgoing screen's
  cleanup(), leaking the animal list's and home panel's sync listeners and
  the home panel's worker thread on every detail/edit navigation.
- The animal list stacked another page-index listener on every reload.
- Deleting a vaccine awaited Firestore on the JavaFX thread; it now runs in
  the background.
- CSV export chooses the file on the JavaFX thread and writes it off it;
  the old task only posted back with Platform.runLater.

Duplication
- Create/Edit animal forms share AnimalFormController; the vaccine forms
  share VaccineForm; every date picker uses DatePickers. Animal forms now
  mark invalid fields in place like the vaccine forms already did.
- Editing a chip by hand now clears the stale barcode: the "original"
  value used to be read after it had been overwritten.
- Names with acc